Fixing align

--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,3 +1,4 @@
 body{
-        color: default
+        margin: 0%;
+        padding: 0%;
 }
