--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -6,5 +6,4 @@ footer{
         justify-content: center;
         position: fixed; 
         bottom: 0;
-        left: 0;
 }
